--- a/project/stories.html
+++ b/project/stories.html
@@ -113,111 +113,120 @@
 
     <!-- stories starts hear -->
 
-<section>
-    <div class="storieshome">
-        <p><a href="./home.html">HOME</a></p>
-        <p>/</p>
-        <p>Articles</p>
-    </div>
-    <div class="stories">
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/1.jpeg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
+    <section>
+        <div class="storieshome">
+            <p><a href="./home.html">HOME</a></p>
+            <p>/</p>
+            <p>Articles</p>
+        </div>
+        <div class="stories">
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/1.jpeg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/sudhamshu pic.jpg" alt="00">
+                    </div>
                 </div>
-                <div class="storieslogo">
-                    <img src="./Assets/sudhamshu pic.jpg" alt="00">
+            </div>
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/2.jpg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/harish pic.jpg" alt="00">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/2.jpg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
-                </div>
-                <div class="storieslogo">
-                    <img src="./Assets/harish pic.jpg" alt="00">
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="stories">
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/3.jpg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
+        <div class="stories">
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/3.jpg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/rajgopal pic.jpg" alt="00">
+                    </div>
                 </div>
-                <div class="storieslogo">
-                    <img src="./Assets/rajgopal pic.jpg" alt="00">
+            </div>
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/4.jpg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/sudhamshu pic.jpg" alt="00">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/4.jpg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
-                </div>
-                <div class="storieslogo">
-                    <img src="./Assets/sudhamshu pic.jpg" alt="00">
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="stories">
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/5.jpg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
+        <div class="stories">
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/5.jpg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/harish pic.jpg" alt="00">
+                    </div>
                 </div>
-                <div class="storieslogo">
-                    <img src="./Assets/harish pic.jpg" alt="00">
+            </div>
+            <div class="storiesimg">
+                <div class="storyimg">
+                    <img src="./Assets/6.jpeg" alt="f4"><br>
+                </div><br>
+                <div class="storiescontent">
+                    <div class="storiespara">
+                        <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
+                        <p>Furniture Editorial's Pick</p>
+                        <p style="color: lightslategray;">september 14, 2017</p>
+                    </div>
+                    <div class="storieslogo">
+                        <img src="./Assets/rajgopal pic.jpg" alt="00">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="storiesimg">
-            <div class="storyimg">
-                <img src="./Assets/6.jpeg" alt="f4"><br>
-            </div><br>
-            <div class="storiescontent">
-                <div  class="storiespara">
-                    <h2 style="text-align: start;">How to Set Your Multimedia Room with Low Budget </h2>
-                    <p>Furniture Editorial's Pick</p>
-                    <p style="color: lightslategray;">september 14, 2017</p>
-                </div>
-                <div class="storieslogo">
-                    <img src="./Assets/rajgopal pic.jpg" alt="00">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+    </section><br>
+
+    <div class="buttons">
+        <button style="background-color: gray;">1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+    </div><br><br><br>
+
 
     <!-- footer starts hear -->
 
