--- a/project/design.html
+++ b/project/design.html
@@ -173,9 +173,15 @@
             </div>
         </div>
     </div><br><br>
-    
-</section>
+</section><br>
 
+<div class="buttons">
+    <button style="background-color: gray;">1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+</div><br><br><br>
 
 
     <!-- footer starts hear -->
